Co-authored-by: dran00 <dran00@users.noreply.github.com>

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -16,7 +16,7 @@
               <div class="card-body">
                 <h4 class="card-title">{{title}}</h4>
                 <p class="card-text">{{story}}</p>
-                <a class="btn btn-primary">Book now</a>
+                <a class="btn btn-primary" href="/movie/listMovies">Book now</a>
               </div>
             </div>
           </div>
