--- a/views/movie/listMovies.handlebars
+++ b/views/movie/listMovies.handlebars
@@ -1,7 +1,7 @@
 <div class="container">
 
 	{{!-- Admin side --}}
-	{{#if user}}
+	{{#if admin}}
 	{{#if movie}}
 	<div class="card card-body">
 		<h3 class="text-primary">Movies Available</h3>
@@ -78,21 +78,47 @@
 						aria-expanded="false" aria-controls="collapseOne{{id}}" style="text-decoration: none;">
 						Showtimes <i class="fas fa-chevron-down"></i>
 					</button>
-					{{#each showtime}}
-					{{#if title EQUALS movie.title }}
-					<div class="card-body">
-						<button type="button" class="btn btn-primary">{{title}}</button>
-					</div>
-					{{/if}}
-					{{/each}}
-					
 				</div>
-				{{!--
 				<div id="collapseOne{{id}}" class="collapse" aria-labelledby="headingOne" data-parent="#storyAccordion">
 					<div class="card-body">
-						<button type="button" class="btn btn-primary">Primary</button>
+						<p>Bedok</p>
+						{{#each ../showtime}}
+						{{#compareStrings title ../title}}
+						{{#compareStrings branch "Bedok"}}
+						<a href="/ticket/seats/{{id}}"><button type="button" class="btn btn-primary">{{formatDate showDateTime "MM-DD-YYYY"}}
+							{{formatDate showDateTime "hh:mm:ss"}}</button></a>
+						{{/compareStrings}}
+						{{/compareStrings}}
+						{{/each}}
+						<p>Tampines</p>
+						{{#each ../showtime}}
+						{{#compareStrings title ../title}}
+						{{#compareStrings branch "Tampines"}}
+						<a href="/ticket/seats/{{id}}"><button type="button" class="btn btn-primary">{{formatDate showDateTime "MM-DD-YYYY"}}
+							{{formatDate showDateTime "hh:mm:ss"}}</button></a>
+						{{/compareStrings}}
+						{{/compareStrings}}
+						{{/each}}
+						<p>Woodlands</p>
+						{{#each ../showtime}}
+						{{#compareStrings title ../title}}
+						{{#compareStrings branch "Woodlands"}}
+						<a href="/ticket/seats/{{id}}"><button type="button" class="btn btn-primary">{{formatDate showDateTime "MM-DD-YYYY"}}
+							{{formatDate showDateTime "hh:mm:ss"}}</button></a>
+						{{/compareStrings}}
+						{{/compareStrings}}
+						{{/each}}
+						<p>Yishun</p>
+						{{#each ../showtime}}
+						{{#compareStrings title ../title}}
+						{{#compareStrings branch "Yishun"}}
+						<a href="/ticket/seats/{{id}}"><button type="button" class="btn btn-primary">{{formatDate showDateTime "MM-DD-YYYY"}}
+							{{formatDate showDateTime "hh:mm:ss"}}</button></a>
+						{{/compareStrings}}
+						{{/compareStrings}}
+						{{/each}}
 					</div>
-				</div> --}}
+				</div>
 			</div>
 		</div>
 		{{/each}}
@@ -111,7 +137,7 @@
 			<div class="card-header">
 				<h5 class="card-title">{{title}}</h5>
 				{{story}}
-			</div>	
+			</div>
 			<div class="card-body">
 				<div class="row">
 					<div class="col-lg-2">
@@ -159,26 +185,62 @@
 				</div>
 			</div>
 
+			{{#if ../showtime}}
 			<div class="accordion" id="storyAccordion">
 				<div class="card-header" id="headingOne">
-					<button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne{{id}}"
-						aria-expanded="false" aria-controls="collapseOne{{id}}" style="text-decoration: none;">
+					<button class="btn btn-link" type="button" data-toggle="collapse"
+						data-target="#collapseOne{{../id}}" aria-expanded="false" aria-controls="collapseOne{{../id}}"
+						style="text-decoration: none;">
 						Showtimes <i class="fas fa-chevron-down"></i>
 					</button>
 				</div>
-				{{#each showtime}}
-				<div id="collapseOne{{id}}" class="collapse" aria-labelledby="headingOne" data-parent="#storyAccordion">
+
+				<div id="collapseOne{{../id}}" class="collapse" aria-labelledby="headingOne"
+					data-parent="#storyAccordion">
 					<div class="card-body">
-						<button type="button" class="btn btn-primary" value="{{title}}">
-							{{#if title}}
-							{{title}}
-							{{/if}}</button>
+						<p>Bedok</p>
+						{{#each ../showtime}}
+						{{#compareStrings title ../title}}
+						{{#compareStrings branch "Bedok"}}
+						<a href="/ticket/seats/{{id}}"><button type="button" class="btn btn-primary">{{formatDate showDateTime "MM-DD-YYYY"}}
+							{{formatDate showDateTime "hh:mm:ss"}}</button></a>
+						{{/compareStrings}}
+						{{/compareStrings}}
+						{{/each}}
+						<p>Tampines</p>
+						{{#each ../showtime}}
+						{{#compareStrings title ../title}}
+						{{#compareStrings branch "Tampines"}}
+						<a href="/ticket/seats/{{id}}"><button type="button" class="btn btn-primary">{{formatDate showDateTime "MM-DD-YYYY"}}
+							{{formatDate showDateTime "hh:mm:ss"}}</button></a>
+						{{/compareStrings}}
+						{{/compareStrings}}
+						{{/each}}
+						<p>Woodlands</p>
+						{{#each ../showtime}}
+						{{#compareStrings title ../title}}
+						{{#compareStrings branch "Woodlands"}}
+						<a href="/ticket/seats/{{id}}"><button type="button" class="btn btn-primary">{{formatDate showDateTime "MM-DD-YYYY"}}
+							{{formatDate showDateTime "hh:mm:ss"}}</button></a>
+						{{/compareStrings}}
+						{{/compareStrings}}
+						{{/each}}
+						<p>Yishun</p>
+						{{#each ../showtime}}
+						{{#compareStrings title ../title}}
+						{{#compareStrings branch "Yishun"}}
+						<a href="/ticket/seats/{{id}}"><button type="button" class="btn btn-primary">{{formatDate showDateTime "MM-DD-YYYY"}}
+							{{formatDate showDateTime "hh:mm:ss"}}</button></a>
+						{{/compareStrings}}
+						{{/compareStrings}}
+						{{/each}}
 					</div>
 				</div>
-				{{/each}}
 			</div>
+			{{/if}}
 		</div>
 		{{/each}}
+
 	</div>
 	{{else}}
 	<h3>No movies available</h3>
@@ -189,5 +251,5 @@
 <script>
 	$('[data-toggle=confirmation]').confirmation({
 		rootSelector: '[data-toggle=confirmation]',
-	});
+	});	
 </script>
