--- a/views/partials/_usernavbar.handlebars
+++ b/views/partials/_usernavbar.handlebars
@@ -2,7 +2,7 @@
 	<div class="container">
 		<a class="navbar-brand" href="/">
 		<div class="logo-image">
-            <img src="../img/doragon.png" width="60" height="60" class="img-fluid">
+            <img src="/img/doragon.png" width="60" height="60" class="img-fluid">
       	</div>
 		</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -17,9 +17,6 @@
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="/movie/listMovies">Movie List</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="/ticket/seats">Seats</a>
 				</li>
 			</ul>
 			{{!-- {{/if}} --}}
