--- a/views/ticket/payment.handlebars
+++ b/views/ticket/payment.handlebars
@@ -1,7 +1,5 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
 <body>
-
   <h2>Checkout Form</h2>
   <div class="row">
     <div class="col-75">
@@ -62,6 +60,7 @@
               <div class="col-50">
                 <div class="details">
                   <label for="moviedetail">Details:</label>
+                  <label for="moviedate">Movie Date: {{ branch }}</label>
                   <label for="moviedate">Movie Date: {{ movieDate }}</label>
                   <label for="moviedate">Movie Time: {{ movieTime }}</label>
                 </div>
