--- a/views/ticket/seats.handlebars
+++ b/views/ticket/seats.handlebars
@@ -67,8 +67,8 @@
         alert("Please choose a avaliable seat.");
       }
       
-      document.getElementById("selected-seats").value = selected_seats;
-      document.getElementById("updated-seats").value = updated_seats;
+      document.getElementById("selected-seats").value = selected_seats.toString();
+      document.getElementById("updated-seats").value = updated_seats.toString();
       document.getElementById("branch").value = document.getElementById("Sbranch").innerHTML;
       document.getElementById("title").value = document.getElementById("Stitle").innerHTML;
       document.getElementById("noTicket").value = count;
