--- a/views/user/profile/profile.handlebars
+++ b/views/user/profile/profile.handlebars
@@ -56,6 +56,7 @@
                 <li><i class="fas fa-filter pr-1"></i>{{title}}</li>
                 <li><i class="fas fa-map-marker-alt pr-1"></i>Selected Seat: {{selectedSeat}}</li>
                 <li><i class="fas fa-map-marker-alt pr-1"></i>Branch: {{branch}}</li>
+                <li><i class="fas fa-map-marker-alt pr-1"></i>Time: {{showDateTime}}</li>
               </ul>
               {{/each}}
           </div>
